templates/cert-mananger/LetsEncrypt/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: echo-server-1
  namespace: sandbox
  labels:
    app: echo-server-1
spec:
  template:
    metadata:
      name: echo-server-1
      labels:
        app: echo-server-1
    spec:
      containers:
        - image: paulbouwer/hello-kubernetes:1.10
          imagePullPolicy: IfNotPresent
          name: echo-server-1
          ports:
            - containerPort: 8080
      restartPolicy: Always
  selector:
    matchLabels:
      app: echo-server-1

---
apiVersion: v1
kind: Service
metadata:
  name: echo-server-1
  namespace: sandbox
spec:
  selector:
    app: echo-server-1
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
